# ICA_TM_V2

./: .gitignore  config.cfg  readMe.txt  tmp1.cpp
Documents/: my-ICA-TM.service  my-ICA-gpio-perms.service
Documents/GPIO_UART_fix/: ICA_99-uart-sysfs-perms.rules  ICA_fix-gpio-perms.sh  ICA_gpio-sysfs-fix.service  ICA_install_gpio_fix.sh  readme.md
Documents/GPIO_fix/: ICA_99-gpio-sysfs-perms.rules  ICA_gpio-sysfs-fix.service  ICA_install_gpio_fix.sh  readme.md
Documents/HowTo/LabelPrint/: PrinterSetup.md  QL700.ppd  installPrinter.txt
Documents/HowTo/onBoot/: CopyTo.txt  my-ICA-TM.service  my-ICA-gpio-perms.service
Documents/Steps/: copyNewUpdate.sh  step1.md
Documents/newInTest/: my-ICA-TM.service  runTM.sh
TM_V2/: Makefile  eeprom_versions.md  usv_test_util_TMP.cpp
TM_V2/Source/: getBasic.cpp  getBasic.h  main.plantuml  main_pi.cpp  main_pi.h  usv_test_util.cpp  usv_test_util.h
TM_V2/Source/ICA2506/: CCC.sh  ICA2506_Func.cpp  ICA2506_Func.h  ICA2506_Func.md  ICA2506_UART.cpp  RunCompile.sh  STM32G030Class.cpp  Stm32G030Class.h  ica2506_flash  main.cpp  main.cpp.tmp
TM_V2/Source/ICA2506/Documents/: ICA2506_Func.md
TM_V2/Source/ICA2506/OpenOCD_CFG/: raspberrypi2-native.cfg
TM_V2/Source/ICA2506/_tmp/: bootloader_optr.cpp  optr_calc
TM_V2/Source/STM32ProgFunc/: RunCompile.sh  STM32G030Class.cpp  STM32ProgFunc  Stm32G030Class.h  main.cpp  test1.sh
TM_V2/Source/STM32ProgFunc/Documents/: ICA2506_Func.md  OptionByte.txt
TM_V2/Source/STM32ProgFunc/Firmware_Folder/: ICA2510V10_EEPROM.txt  ICA2510V120_EEPROM.txt  ICA2510V120_STM32.bin.old
TM_V2/Source/STM32ProgFunc/Firmware_Folder/eeprom_tmp/: ICA2506V110_EEPROM.txt  ICA2510V100_EEPROM.txt  ICA2510V110_EEPROM.txt  ICA2510V120_EEPROM.txt
TM_V2/Source/STM32ProgFunc/OpenOCD_CFG/: raspberrypi2-native.cfg  stm32g0x.cfg
TM_V2/Source/TestFunction/: ConsoleKeyBoard.cpp  ConsoleKeyBoard.h  ErrorList.h  GlobalFunc.cpp  GlobalFunc.h  ICA2315.cpp  ICA2315.h  ICA_justEUI.cpp  ICA_justEUI.h  eeprom.cpp  eeprom.h  log_resualt.cpp  log_resualt.h  myNet.h  mySerialPort.cpp  mySerialPort.h
TM_V2/Source/TestFunction/Hardware/: I2CDevice.h  LabDevice.cpp  LabDevice.h
TM_V2/Source/TestFunction/LTC3350/: LTC3350_formats.h  LTC3350_reg_defs.h
TM_V2/Source/USVTestInterface/: ADS111X.h  INA225.cpp  INA226.h  PCF8574.h  USVTestInterface.h  ica-logo.cpp  ica-logo.h  myLCD.h  printFunc.cpp  printFunc.h
TM_WorkSpace/: config.cfg
TM_WorkSpace/TestMachine001/: ICA-NT-TEST.csv  ICA2407V1.0.csv  ICA2407V2.0.csv  ICA2510V1.1.csv
TM_WorkSpace/pdfFiles/: temp_selected_dates.csv
_tmp/: ICA2506_Flash_Micro.cpp  ICA2506_Flash_Micro.h  ICA2506_UART.h  OPTION_BYTES_GUIDE.md  config.cfg  config_1.cfg  optr_calculator.cpp
rosWS/: reCompile.sh  runTM.sh  setGPIO.sh
rosWS/src/my_msgs_pkg/: CMakeLists.txt  package.xml
rosWS/src/my_msgs_pkg/msg/: MyMsgQtPub.msg  MyMsgTmMsgBoxPub.msg  MyMsgTmRsuPub.msg  MyMsgTmStsPub.msg
rosWS/src/qt_gui_node_pkg/: package.xml  setup.cfg  setup.py
rosWS/src/qt_gui_node_pkg/qt_gui_node_pkg/: csvToPDF.py  csv_viewer_dialog.py  gui_code_dialog.py  gui_node.py  read_device_info.py  sendEmail.py
rosWS/src/qt_gui_node_pkg/qt_gui_node_pkg/ui/: W_ica2308.ui  W_main.ui  W_testing.ui  convertUI.sh
rosWS/src/qt_gui_node_pkg/qt_gui_node_pkg/ui/py/: uiW_ica2308.py  uiW_main.py  uiW_testing.py
rosWS/src/tm_node_pkg/: CMakeLists.txt  package.xml
rosWS/src/tm_node_pkg/src/: tm_node.cpp
rosWS/tmp/: disChargeCurve.csv
tempTM_WorkSpace/: config.cfg
tempTM_WorkSpace/TestMachine001/: ICA-NT-TEST.csv  ICA2405V1.5.csv  ICA2405V1.6.csv  ICA2506V1.0.csv  ICA2510V1.1.csv
tempTM_WorkSpace/pdfFiles/: temp_selected_dates.csv
