<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tm_node_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sasan.safaei@ica.de">ica</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>my_msgs_pkg</build_depend>
  <exec_depend>my_msgs_pkg</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
